--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
-name:first
-on:workflow_dispatch
+name: first
+
+on: 
+  workflow_dispatch:
+
 jobs:
   first_job:
-     runs-on:ubuntu-latest
-     steps:
-       -name: print greeting
+    runs-on: ubuntu-latest
+    steps:
+      - name: print greeting
         run: echo "Hello greeting"
-  
